Fix form functionality and overflow

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ textarea {
 .form-details {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 17px;
 }
 
@@ -540,7 +541,10 @@ textarea {
     background-image: url('img/form.png');
     background-size: contain;
     background-position-x: 30px;
-    height: 100vh;
+  }
+
+  .form-details {
+    align-items: center;
   }
 
   .form-section .info {
